# nost-film

./: .env.dist  Cargo.toml  README.md
.github/workflows/: unit-tests.yml
src/: commands.rs  files.rs  main.rs
