[package]
name = "nost-film"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
dotenv = "0.15"
chrono= "0.4"

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]

[dev-dependencies]
tempfile = "3.6"
